[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ray-email-sorter"
version = "0.1.0"
description = "Ray email sorting utility"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
	"scikit-learn",
	"python-dotenv",
    "rich",
]

[project.scripts]
ray = "ray.helpers:start"

[tool.setuptools]
packages = ["ray"]

[tool.setuptools.package-dir]
"" = "src"



